<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignupFragment"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signupFirstName"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstNameText"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signupLastName"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastNameText"
        android:layout_below="@id/signupFirstName"
        android:inputType="text" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signupEmail"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="email"
        android:layout_below="@id/signupLastName"
        android:inputType="textEmailAddress" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signupPhone"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumberText"
        android:layout_below="@id/signupEmail"
        android:inputType="phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signupPassword"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordText"
        android:layout_below="@id/signupPhone"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="10dp"
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupPassword"
        android:text="@string/registerText" />


</RelativeLayout>